--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "index.html", "use": "@vercel/static" },
-      { "src": "serverless/sendEmail.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/api/sendEmail", "dest": "serverless/sendEmail.js" },
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "serverless/sendEmail.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/sendEmail", "dest": "serverless/sendEmail.js" },
+    { "src": "/(.*)", "dest": "/$1" }
+  ]
+}
